hybris-on-anthos-infra-as-code/outdated/a4_onprem_istio_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hac-bo-ingress
  namespace: hybris
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hybris-hac
          servicePort: 443
      - path: /backoffice
        backend:
          serviceName: hybris-backoffice
          servicePort: 443
