hybris-on-anthos-infra-as-code/outdated/istio2_hybris_sqldb-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: hybrisdb-hybris
  namespace: hybris-gke
spec:
  hosts:
  # must be of form name.namespace.global
  - hybrisdb-svc.hybris.global
  # Treat remote cluster services as part of the service mesh
  # as all clusters in the service mesh share the same root of trust.
  location: MESH_INTERNAL
  ports:
  - name: mysql
    number: 3306
    protocol: tcp
  resolution: DNS
  addresses:
  # the IP address to which httpbin.bar.global will resolve to
  # must be unique for each remote service, within a given cluster.
  # This address need not be routable. Traffic for this IP will be captured
  # by the sidecar and routed appropriately.
  - 240.0.0.2
  endpoints:
  # This is the routable address of the ingress gateway in cluster2 that
  # sits in front of sleep.foo service. Traffic from the sidecar will be
  # routed to this address.
  - address: 139.178.73.4
    ports:
      mysql: 15443 # Do not change this port value
